# redfin-lib

./: .ghci  .gitignore  ChangeLog.md  README.md  redfin-lib.cabal  serval-haskell.cabal  trace.css  unreasonably-polymorphic-isa.cabal
docs/: overview.md
src/: FS.hs  ISA.hs  ToyRISC.hs  Tree.hs
src/ISA/: Assembly.hs  SMT.hs  Selective.hs  Semantics.hs  SemanticsProp.hs  Symbolic.hs  Types.hs
src/ISA/Assembly/: Parser.hs
src/ISA/Backend/: CFG.hs  Dependencies.hs  Graph.hs  IO.hs  ListTrace.hs  Simulation.hs
src/ISA/Backend/Graph/: BasicBlock.hs
src/ISA/Backend/Symbolic/: List.hs  QueryList.hs  Zipper.hs  ZipperEngine.hs
src/ISA/Backend/Symbolic/List/: QueryRun.hs  Run.hs  Trace.hs
src/ISA/Backend/Symbolic/Zipper/: Run.hs  Save.hs
src/ISA/Backend/Symbolic/ZipperEngine/: Run.hs
src/ISA/Example/: Add.hs  Common.hs  MotorControl.hs  Sum.hs
src/ISA/Semantics/: Overflow.hs
src/ISA/Types/: Boolean.hs  CTL.hs  Context.hs  Instruction.hs  Key.hs  Parser.hs  Prop.hs  SBV.hs  Symbolic.hs  Tree.hs  ZeroOneTwo.hs
src/ISA/Types/CTL/: Model.hs
src/ISA/Types/Instruction/: Decode.hs  Encode.hs  Opcodes.hs
src/ISA/Types/Key/: Parser.hs
src/ISA/Types/SBV/: SFunArray.hs
src/ISA/Types/Symbolic/: ACTL.hs  Address.hs  Context.hs  Parser.hs  SMT.hs  Trace.hs
src/ISA/Types/Symbolic/ACTL/: Model.hs
src/ISA/Types/Symbolic/Logic/: Adhoc.hs
src/ISA/Types/Symbolic/SMT/: Problem.hs  Solving.hs  Translation.hs
src/ISA/Types/Symbolic/Trace/: Property.hs  Render.hs
src/ToyRISC/: SMT.hs  Semantics.hs  Symbolic.hs  Types.hs
src/ToyRISC/Backend/: Dependencies.hs  IO.hs  ListTrace.hs  ListTraceBackup.hs  State.hs  Symbolic.hs  TreeTrace.hs  World1.hs  Worlds.hs
src/ToyRISC/Types/: Instruction.hs
test/: TestSuite.hs
test/ISA/SMT/: Tests.hs
test/ISA/Types/Instruction/: Tests.hs
test/ToyRISC/SMT/: Tests.hs
