cabal-version: 1.12

name:           redfin-lib
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/geo2a/redfin-lib#readme>
homepage:       https://github.com/geo2a/redfin-lib#readme
bug-reports:    https://github.com/geo2a/redfin-lib/issues
author:         Georgy Lukyanov
maintainer:     mail@geo2a.info
copyright:      2019-2021 Georgy Lukyanov
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/geo2a/redfin-lib

library
  default-language: Haskell2010
  exposed-modules:
      ISA.Assembly,
      ISA.Semantics,

      ISA.Types,
      ISA.Types.Parser,
      ISA.Types.Key,
      ISA.Types.Prop,
      ISA.Types.SBV,
      ISA.Types.SBV.SFunArray,
      ISA.Types.Tree,
      ISA.Types.ZeroOneTwo,
      ISA.Types.Context
      ISA.Types.Instruction,
      ISA.Types.Instruction.Decode,
      ISA.Types.Instruction.Encode,
      ISA.Types.Instruction.Opcodes,
      ISA.Types.Symbolic,
      ISA.Types.Symbolic.Address,
      ISA.Backend.Dependencies,
      ISA.Backend.Graph,
      ISA.Backend.Graph.BasicBlock,
      ISA.Backend.Simulation,
      ISA.Backend.Symbolic.Zipper,
      ISA.Backend.Symbolic.Zipper.Run,
      ISA.Backend.Symbolic.List.Trace,
      ISA.Types.Symbolic.SMT,
      ISA.Types.Symbolic.Property,
      ISA.Types.Symbolic.Parser,
      ISA.Example.Add
      ISA.Example.Sum,
      ISA.Example.MotorControl
  other-modules:
      ISA.Example.Common,
      FS
  hs-source-dirs:
      src
  build-depends:
                QuickCheck,
                aeson >= 1.5.5.1,
                algebraic-graphs >= 0.5,
                async >= 2.2.2,
                base >=4.7 && <5,
                co-log-core,
                constraints,
                containers,
                deepseq >= 1.4.4.0,
                extra >= 1.7.8,
                generic-random,
                generics-sop,
                haskeline,
                megaparsec,
                microlens-platform,
                mtl,
                parser-combinators,
                pretty-simple,
                sbv >= 8.6,
                selective,
                stm >= 2.5.0.0,
                text,
                time >= 1.8.0.2,
                transformers,
                tree-view >= 0.5,
                polysemy >= 1.4.0.0,
                polysemy-plugin >= 0.2.5.2
  default-extensions: LambdaCase
                    , MultiWayIf
                    , FlexibleContexts
                    , FlexibleInstances
                    , RankNTypes
                    , ConstraintKinds
                    , StandaloneDeriving
                    , OverloadedStrings
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , DataKinds
                    , PolyKinds
                    , TypeApplications
                    , ScopedTypeVariables
                    , GADTs
                    , TupleSections

  GHC-options:      -Wall
                    -fno-warn-name-shadowing
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -fplugin=Polysemy.Plugin
test-suite tests
  GHC-options:     -Wall
                   -Werror=incomplete-replacements
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          TestSuite.hs
  other-modules:    ISA.SMT.Tests,
                    ISA.Types.Instruction.Tests
  type:             exitcode-stdio-1.0

  build-depends:
                HUnit,
                QuickCheck,
                aeson >= 1.5.5.1,
                async >= 2.2.2,
                base            >= 4.7 && < 5,
                containers,
                deepseq >= 1.4.4.0,
                extra >= 1.7.8,
                sbv,
                stm >= 2.5.0.0,
                tasty,
                tasty-hunit,
                tasty-quickcheck,
                time >= 1.8.0.2,
                unreasonably-polymorphic-isa