cabal-version: 1.12

name:           serval-haskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/serval-haskell#readme>
homepage:       https://github.com/githubuser/serval-haskell#readme
bug-reports:    https://github.com/githubuser/serval-haskell/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/serval-haskell

library
  default-language: Haskell2010
  exposed-modules:
      ISA,
      ISA.Types.Symbolic,
      ISA.Types.Symbolic.SMT
  other-modules:
      FS,
      ISA.Types,
      ISA.Types.Instruction,
      ISA.Semantics,
      ISA.Backend.IO,
      ISA.Backend.Dependencies,
      ISA.Backend.Symbolic.List
  hs-source-dirs:
      src
  build-depends:
      algebraic-graphs,
      base >=4.7 && <5,
      constraint,
      containers,
      co-log,
      microlens-platform,
      mtl,
      sbv,
      selective,
      pretty-simple,
      text,
      transformers
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , RankNTypes
                    , ConstraintKinds
                    , StandaloneDeriving
                    , OverloadedStrings
  GHC-options:      -Wall
                    -fno-warn-name-shadowing
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints

test-suite tests
  GHC-options:     -Wall
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          TestSuite.hs
  other-modules:    ISA.SMT.Tests
  type:             exitcode-stdio-1.0

  build-depends:
    base            >= 4.7 && < 5,
    containers,
    HUnit,
    tasty,
    tasty-hunit,
    sbv,
    serval-haskell
