cabal-version: 1.12

name:           unreasonably-polymorphic-isa
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/geo2a/unreasonably-polymorphic-isa#readme>
homepage:       https://github.com/geo2a/unreasonably-polymorphic-isa#readme
bug-reports:    https://github.com/geo2a/unreasonably-polymorphic-isa/issues
author:         Georgy Lukyanov
maintainer:     mail@geo2a.info
copyright:      2019 Georgy Lukyanov
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/geo2a/unreasonably-polymorphic-isa

library
  default-language: Haskell2010
  exposed-modules:
      ISA,
      ISA.Assembly,
      ISA.Types,
      ISA.Types.Instruction,
      ISA.Types.Instruction.Opcodes,
      ISA.Types.Instruction.Decode,
      ISA.Types.Instruction.Encode,
      ISA.Types.Symbolic,
      ISA.Types.Symbolic.SMT,
      ISA.Types.Symbolic.Trace
  other-modules:
      FS,
      ISA.Selective,
      ISA.Semantics,
      ISA.Backend.IO,
      ISA.Backend.Dependencies,
      ISA.Backend.Symbolic.List,
      ISA.Backend.Symbolic.List.Run
  hs-source-dirs:
      src
  build-depends:
      algebraic-graphs,
      base >=4.7 && <5,
      blaze-html,
      blaze-markup,
      constraint,
      containers,
      co-log-core,
      generic-random,
      generics-sop,
      haskeline,
      microlens-platform,
      mtl,
      sbv,
      selective,
      pretty-simple,
      text,
      transformers,
      QuickCheck,
      tree-view >= 0.5
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , RankNTypes
                    , ConstraintKinds
                    , StandaloneDeriving
                    , OverloadedStrings
  GHC-options:      -Wall
                    -fno-warn-name-shadowing
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-replacements
                    -Wredundant-constraints
                    -Werror=incomplete-replacements

test-suite tests
  GHC-options:     -Wall
                   -Werror=incomplete-replacements
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          TestSuite.hs
  other-modules:    ISA.SMT.Tests,
                    ISA.Types.Instruction.Tests
  type:             exitcode-stdio-1.0

  build-depends:
    base            >= 4.7 && < 5,
    containers,
    HUnit,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    sbv,
    unreasonably-polymorphic-isa