cabal-version: 1.12

name:           unreasonably-polymorphic-isa
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/geo2a/unreasonably-polymorphic-isa#readme>
homepage:       https://github.com/geo2a/unreasonably-polymorphic-isa#readme
bug-reports:    https://github.com/geo2a/unreasonably-polymorphic-isa/issues
author:         Georgy Lukyanov
maintainer:     mail@geo2a.info
copyright:      2019-2020 Georgy Lukyanov
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/geo2a/unreasonably-polymorphic-isa

library
  default-language: Haskell2010
  exposed-modules:
      FS,
      ISA.Assembly,
      ISA.Selective,
      ISA.Semantics,

      ISA.Types,
      ISA.Types.Instruction,
      ISA.Types.Instruction.Decode,
      ISA.Types.Instruction.Encode,
      ISA.Types.Instruction.Opcodes,
      ISA.Types.Symbolic,
      ISA.Types.Symbolic.Context,
      ISA.Types.Symbolic.SMT,
      ISA.Types.Symbolic.Trace,
      ISA.Types.Symbolic.Parser

      ISA.Backend.Symbolic.QueryList,
      ISA.Backend.Symbolic.List.QueryRun,
      ISA.Backend.IO,
      ISA.Backend.Dependencies,

      ISA.Example.Common,
      ISA.Example.Add,
      ISA.Example.Sum,
      ISA.Example.MotorControl
  hs-source-dirs:
      src
  build-depends:
      algebraic-graphs,
      base >=4.7 && <5,
      constraint,
      containers,
      co-log-core,
      generic-random,
      generics-sop,
      haskeline,
      microlens-platform,
      mtl,
      selective,
      sbv >= 8.6,
      pretty-simple,
      text,
      transformers,
      QuickCheck,
      tree-view >= 0.5,
      megaparsec,
      parser-combinators
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , RankNTypes
                    , ConstraintKinds
                    , StandaloneDeriving
                    , OverloadedStrings
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , GADTs
                    , GeneralizedNewtypeDeriving

  GHC-options:      -Wall
                    -fno-warn-name-shadowing
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  GHC-options:     -Wall
                   -Werror=incomplete-replacements
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          TestSuite.hs
  other-modules:    ISA.SMT.Tests,
                    ISA.Types.Instruction.Tests
  type:             exitcode-stdio-1.0

  build-depends:
    base            >= 4.7 && < 5,
    containers,
    HUnit,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    sbv,
    unreasonably-polymorphic-isa