cabal-version: 1.12

name:           unreasonably-polymorphic-isa
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/geo2a/unreasonably-polymorphic-isa#readme>
homepage:       https://github.com/geo2a/unreasonably-polymorphic-isa#readme
bug-reports:    https://github.com/geo2a/unreasonably-polymorphic-isa/issues
author:         Georgy Lukyanov
maintainer:     mail@geo2a.info
copyright:      2019-2020 Georgy Lukyanov
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/geo2a/unreasonably-polymorphic-isa

library
  default-language: Haskell2010
  exposed-modules:
      ISA.Assembly,
      ISA.Selective,
      ISA.Semantics,


      ISA.Types,
      ISA.Types.CTL,
      ISA.Types.CTL.Model,
      ISA.Types.SBV,
      ISA.Types.Tree,
      ISA.Types.Instruction,
      ISA.Types.Instruction.Decode,
      ISA.Types.Instruction.Encode,
      ISA.Types.Instruction.Opcodes,
      ISA.Types.Symbolic,
      ISA.Backend.Dependencies,
      ISA.Backend.Symbolic.Zipper,
      ISA.Backend.Symbolic.Zipper.Run,
      ISA.Types.Symbolic.Context,
      ISA.Types.Symbolic.SMT,
      ISA.Types.Symbolic.Parser
      ISA.Example.Sum,
      ISA.Example.MotorControl
  other-modules:
      ISA.Backend.Symbolic.List,
      ISA.Backend.Symbolic.List.Trace,
      ISA.Backend.Symbolic.List.Run,
      ISA.Example.Common,
      ISA.SemanticsProp,
      FS
  hs-source-dirs:
      src
  build-depends:
                QuickCheck,
                aeson >= 1.5.5.1,
                algebraic-graphs,
                async >= 2.2.2,
                base >=4.7 && <5,
                co-log-core,
                constraint,
                containers,
                deepseq >= 1.4.4.0,
                extra >= 1.7.8,
                generic-random,
                generics-sop,
                haskeline,
                megaparsec,
                microlens-platform,
                mtl,
                parser-combinators,
                pretty-simple,
                sbv >= 8.6,
                selective,
                stm >= 2.5.0.0,
                text,
                time >= 1.8.0.2,
                transformers,
                tree-view >= 0.5,
                hint
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , RankNTypes
                    , ConstraintKinds
                    , StandaloneDeriving
                    , OverloadedStrings
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , GADTs
                    , TupleSections

  GHC-options:      -Wall
                    -fno-warn-name-shadowing
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wredundant-constraints
test-suite tests
  GHC-options:     -Wall
                   -Werror=incomplete-replacements
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          TestSuite.hs
  other-modules:    ISA.SMT.Tests,
                    ISA.Types.Instruction.Tests
  type:             exitcode-stdio-1.0

  build-depends:
                HUnit,
                QuickCheck,
                aeson >= 1.5.5.1,
                async >= 2.2.2,
                base            >= 4.7 && < 5,
                containers,
                deepseq >= 1.4.4.0,
                extra >= 1.7.8,
                sbv,
                stm >= 2.5.0.0,
                tasty,
                tasty-hunit,
                tasty-quickcheck,
                time >= 1.8.0.2,
                unreasonably-polymorphic-isa